Add PageCentered, placeholder app icon

--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -8,3 +8,18 @@ body,
 .app {
 	@include background-color("background");
 }
+
+.page-centered-outer {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.page-centered-inner {
+	text-align: center;
+}
+
+.page-centered-content {
+	margin-top: $spacing-large;
+}
