--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable-next-line */
 html,
 body,
 #root,
@@ -10,8 +11,8 @@ body,
 }
 
 .page-centered-outer {
-	height: 100%;
 	display: flex;
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 }
