--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,6 +1,9 @@
 // Style reset
 @import "../../../node_modules/minireset.css/minireset.min.css";
 
+// Calendar styles
+@import "../../../node_modules/react-day-picker/lib/style.css";
+
 // Base
 @import "base/variables";
 @import "base/mixins";
@@ -11,3 +14,4 @@
 
 // Elements
 @import "elements/input";
+@import "elements/calendar";
