--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -3,6 +3,7 @@ $themes: (
 	"light": (
 		"background": #F0F0F0,
 		"background-hover": #E2E2E2,
+		"background-editor": #F9F9F9,
 		"button": #4E8BD2,
 		"button-hover": #447AB8,
 		"text": #353535,
@@ -12,6 +13,7 @@ $themes: (
 	"dark": (
 		"background": #242326,
 		"background-hover": #3F3F41,
+		"background-editor": #373739,
 		"button": #4C81BF,
 		"button-hover": #4371A7,
 		"text": #D0D0D0,
