--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -27,12 +27,13 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, 
 $font-size: 16px;
 $font-weight-normal: 300;
 $font-weight-bold: 500;
-$line-height: 2;
+$line-height: 1.7;
 
 // Spacing
 $spacing-small: 15px;
 $spacing-medium: 30px;
 $spacing-large: 60px;
+$spacing-rel-small: 4vw;
 
 // Other
 $border-radius: 5px;
