--- a/src/assets/styles/elements/_input.scss
+++ b/src/assets/styles/elements/_input.scss
@@ -1,10 +1,14 @@
 button,
 input,
 textarea {
-	padding: (0.75 * $spacing-small) $spacing-small;
 	border: 0;
-	border-radius: $border-radius;
 	outline: none;
+}
+
+button,
+input {
+	padding: (0.75 * $spacing-small) $spacing-small;
+	border-radius: $border-radius;
 }
 
 button {
@@ -36,5 +40,11 @@ button {
 textarea {
 	width: 100%;
 	height: auto;
+	overflow: hidden;
 	resize: none;
+	background: none;
+}
+
+::-webkit-scrollbar {
+	display: none;
 }
