--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -31,12 +31,12 @@ $line-height: 1.7;
 
 // Spacing
 $spacing-small: 15px;
-$spacing-medium: 30px;
-$spacing-large: 60px;
+$spacing-large: 30px;
 $spacing-rel-small: 4vw;
+$spacing-rel-large: 6vw;
 
 // Other
 $border-radius: 5px;
-$calendar-cell-size: 37px;
+$calendar-cell-size: 40px;
 $input-height: 36px;
 $transition: 0.2s;
