--- a/src/assets/styles/elements/_editor.scss
+++ b/src/assets/styles/elements/_editor.scss
@@ -6,6 +6,10 @@
 	overflow-y: auto;
 	border-radius: $border-radius;
 	@include background-color("background-editor");
+
+	textarea {
+		background: none;
+	}
 }
 
 .editor-title {
