--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -23,7 +23,8 @@ $themes: (
 ) !default;
 
 // Fonts
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-size: 16px;
 $font-weight-normal: 300;
 $font-weight-bold: 500;
@@ -36,7 +37,9 @@ $spacing-rel-small: 4vw;
 $spacing-rel-large: 6vw;
 
 // Other
-$border-radius: 5px;
+$border-radius-button: 10px;
+$border-radius-input: 3px;
+$box-shadow: 0.5px 0.5px 2px 1px rgba(0, 0, 0, 0.075);
 $calendar-cell-size: 40px;
 $input-height: 36px;
 $transition: 0.2s;
