--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -27,7 +27,8 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, 
 	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-size: 16px;
 $font-weight-normal: 300;
-$font-weight-bold: 500;
+$font-weight-semibold: 500;
+$font-weight-bold: 700;
 $line-height: 1.7;
 
 // Spacing
