--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -10,6 +10,13 @@ body,
 	@include background-color("background");
 }
 
+header {
+	position: absolute;
+	width: 100%;
+	height: 37px;
+	-webkit-app-region: drag;
+}
+
 .page-centered-outer,
 .diary {
 	height: 100%;
