--- a/src/assets/styles/elements/_search.scss
+++ b/src/assets/styles/elements/_search.scss
@@ -20,24 +20,20 @@
 	overflow-y: auto;
 }
 
-.search-result {
-	border-radius: $border-radius-button;
-	box-shadow: $box-shadow;
-	@include background-color("background-editor");
-
-	button {
-		width: 100%;
-		height: 100%;
-		padding: ($spacing-small / 2) $spacing-small;
-	}
+.search-result .button {
+	width: 100%;
+	height: 100%;
+	padding: ($spacing-small / 2) $spacing-small;
 }
 
 .search-result + .search-result {
 	margin-top: $spacing-small;
 }
 
-.date-selected {
-	@include background-color("button");
+.banner-no-results {
+	width: 100%;
+	justify-content: center;
+	@include color("text-faded");
 }
 
 ::-webkit-search-cancel-button {
