--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -10,6 +10,7 @@
 @import "layout/layout";
 
 // Elements
+@import "elements/banner";
 @import "elements/input";
 @import "elements/calendar";
 @import "elements/editor";
