Improve password forms
* Do not display error while entering password
* Do not move forms when displaying error
* Select entered password on incorrect submission

--- a/src/assets/styles/base/_text.scss
+++ b/src/assets/styles/base/_text.scss
@@ -28,6 +28,10 @@ h1,
 	&.banner-error {
 		@include color("error");
 	}
+
+	&.banner-no-results {
+		@include color("text-faded");
+	}
 }
 
 abbr {
