--- a/src/assets/styles/elements/_banner.scss
+++ b/src/assets/styles/elements/_banner.scss
@@ -1,6 +1,8 @@
 .banner {
-	display: inline-flex;
+	display: flex;
 	align-items: center;
+	justify-content: center;
+	width: 100%;
 
 	.svg-wrapper {
 		margin-right: 8px;
