--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -14,4 +14,5 @@
 @import "elements/input";
 @import "elements/calendar";
 @import "elements/editor";
+@import "elements/password-forms";
 @import "elements/search";
