Add preferences window

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -24,7 +24,7 @@ $themes: (
 		"main-hover": #4371A7,
 		"text": #D0D0D0,
 		"text-disabled": #4E4E4E,
-		"text-faded": #BDBDBD
+		"text-faded": #A1A1A1
 	)
 ) !default;
 
