--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -8,11 +8,12 @@
 
 // Layout
 @import "layout/layout";
+@import "layout/overlay";
 
 // Elements
 @import "elements/banner";
 @import "elements/input";
 @import "elements/calendar";
 @import "elements/editor";
-@import "elements/password-forms";
+@import "elements/form";
 @import "elements/search";
