Improve file structure

--- a/src/renderer/assets/styles/styles.scss
+++ b/src/renderer/assets/styles/styles.scss
@@ -1,5 +1,5 @@
 // Style reset
-@import "../../../node_modules/minireset.css/minireset.min.css";
+@import "../../../../node_modules/minireset.css/minireset.min.css";
 
 // Base
 @import "base/variables";
