Improve responsive design

--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -38,6 +38,7 @@ $font-weight-bold: 700;
 $line-height: 1.7;
 
 // Spacing
+$height-header: 37px;
 $spacing-small: 15px;
 $spacing-large: 30px;
 $spacing-rel-small: 4vw;
