--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -29,8 +29,17 @@ $themes: (
 ) !default;
 
 // Fonts
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family:
+	-apple-system,
+	BlinkMacSystemFont,
+	"Segoe UI",
+	Roboto,
+	Helvetica,
+	Arial,
+	sans-serif,
+	"Apple Color Emoji",
+	"Segoe UI Emoji",
+	"Segoe UI Symbol";
 $font-size: 16px;
 $font-weight-normal: 300;
 $font-weight-semibold: 500;
