--- a/src/renderer/assets/styles/elements/_form.scss
+++ b/src/renderer/assets/styles/elements/_form.scss
@@ -5,5 +5,5 @@ fieldset {
 
 legend {
 	margin-bottom: $spacing-small / 2;
-	font-weight: $font-weight-bold;
+	font-weight: $font-weight-semibold;
 }
