--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -25,3 +25,34 @@
 		padding: $spacing-rel-small;
 	}
 }
+
+
+// Preferences overlay
+
+.fieldset-theme label {
+	margin-right: $spacing-small;
+}
+
+.fieldset-file-dir button {
+	margin-top: $spacing-small / 2;
+}
+
+.fieldset-password {
+	input {
+		margin-right: $spacing-small / 2;
+	}
+
+	button {
+		margin-top: $spacing-small / 2;
+	}
+}
+
+
+// Import overlay
+
+.import-overlay {
+	h1,
+	p {
+		margin-bottom: $spacing-small;
+	}
+}
