Improve font weights

--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -18,5 +18,5 @@
 .editor-title {
 	margin-bottom: $spacing-small / 2;
 	font-size: 150%;
-	font-weight: $font-weight-semibold;
+	font-weight: $font-weight-bold;
 }
