--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -2,6 +2,9 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
@@ -10,7 +13,6 @@
 		position: relative;
 		width: 550px;
 		max-width: 100%;
-		margin: 10% auto 0;
 		border-radius: $border-radius-input;
 		box-shadow: $box-shadow;
 		@include background-color("background");
