--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -1,6 +1,7 @@
 .editor {
 	display: grid;
 	grid-template-rows: auto auto 1fr;
+	width: 100%;
 	padding: $spacing-rel-small;
 	overflow-y: auto;
 	border-radius: $border-radius-input;
